2008-02-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bnc #173186

	* e-shell-nm.c: (e_shell_network_monitor): Upstreamed Fejj's OpenSUSE
	patch. Crash while quitting.

2008-02-18  Srinivasa Ragavan  <sragavan@novell.com>

	reviewed by: <delete if not using a buddy>

	* e-shell-nm.c: (e_shell_network_monitor):

2008-02-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bnc #159736. Patch from OpenSUSE.

	* e-shell-nm.c: (e_shell_network_monitor):

2008-02-13  Matthew Barnes  <mbarnes@redhat.com>

	* main.c (kill_dataserver):
	Add commands to kill recent versions of evolution-data-server.

2008-01-30  Srinivasa Ragavan  <sragavan@novell.com>

	* apps_evolution_shell.schemas.in: Change Crash Recovery to Crash
	detection.
	* main.c: (show_recovery_warning):

2008-01-29  Matthew Barnes  <mbarnes@redhat.com>

	* e-component-registry.c:
	Replace G_GNUC_FUNCTION (deprecated) with G_STRFUNC.

2008-01-22  Jan Tichavsky  <Jan.Tichavsky@gmail.com>

	** Fix for bug #511232
	
	* e-shell.c: Fixed typo Uknown -> Unknown
	(patch committed by Andre Klapper)

2008-01-21  Matthew Barnes  <mbarnes@redhat.com>

	* e-shell-window.c (setup_status_bar):
	Make the status bar height as large as the task bar to eliminate
	"bouncing" when navigating the main menu.  Patch by Jean-Christophe
	Begue (#509509).

2008-01-19  Srinivasa Ragavan  <sragavan@novell.com>

	* e-shell.c: (set_line_status): Fix a regression due to my previous
	commit.

2008-01-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #329712

	* e-shell-window-commands.c: (update_offline_menu_item):
	* e-shell-window.c: (update_offline_toggle_status),
	(update_send_receive_sensitivity),
	(offline_toggle_clicked_callback):
	* e-shell.c: (e_shell_construct), (e_shell_save_settings),
	(set_line_status):
	* e-shell.h: Add a new state to maintian forced offline.

2008-01-14  Kjartan Maraas  <kmaraas@gnome.org>

	* apps_evolution_shell.schemas.in: Add missing punctuation.
